--- a/.Readme.md.html
+++ b/.Readme.md.html
@@ -644,6 +644,7 @@ function setDocumentScrollTop(ypos)
 <p>The main design goal of Systext is to provide lightweight systems modeling that allows users to perform the following system modeling tasks</p> 
 <p><a href="Images/screenshot-structure.png?raw=true" target="_blank" rel="noopener noreferrer"><img src="Images/screenshot-structure.png?raw=true" alt="Screenshot" title="Screenshot" style="max-width:100%;" /></a></p> 
 <p><a href="Images/screenshot-fsm.png?raw=true" target="_blank" rel="noopener noreferrer"><img src="Images/screenshot-fsm.png?raw=true" alt="Screenshot" title="Screenshot" style="max-width:100%;" /></a></p> 
+<p><a href="Images/screenshot-constraint.png?raw=true" target="_blank" rel="noopener noreferrer"><img src="Images/screenshot-constraint.png?raw=true" alt="Screenshot" title="Screenshot" style="max-width:100%;" /></a></p> 
 <h1> <a id="wiki" class="anchor" href="#wiki" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>WIKI</h1> 
 <p>The <a href="https://github.com/vorachet/Systext/wiki">wiki</a> contains various resources for users, including a user manual and links to screencasts and scientific papers.</p> 
 <h1> <a id="license" class="anchor" href="#license" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>License</h1> 
