--- a/.Readme.md.html
+++ b/.Readme.md.html
@@ -642,13 +642,16 @@ function setDocumentScrollTop(ypos)
 <h1> <a id="systext" class="anchor" href="#systext" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Systext</h1> 
 <p>Systext is a textual domain-specific language for systems modeling and tradeoff analysis developed as a research project from <a href="https://www.sit.kmutt.ac.th/en/" rel="nofollow">School of Information Technology, King Mongkut's University of Technology Thonburi</a></p> 
 <p>The main design goal of Systext is to provide lightweight systems modeling that allows users to perform the following system modeling tasks</p> 
+<h2> <a id="structural-modeling" class="anchor" href="#structural-modeling" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Structural Modeling</h2> 
 <p><a href="Images/screenshot-structure.png?raw=true" target="_blank" rel="noopener noreferrer"><img src="Images/screenshot-structure.png?raw=true" alt="Screenshot" title="Screenshot" style="max-width:100%;" /></a></p> 
+<h2> <a id="finite-state-machine-modeling" class="anchor" href="#finite-state-machine-modeling" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Finite State Machine Modeling</h2> 
 <p><a href="Images/screenshot-fsm.png?raw=true" target="_blank" rel="noopener noreferrer"><img src="Images/screenshot-fsm.png?raw=true" alt="Screenshot" title="Screenshot" style="max-width:100%;" /></a></p> 
+<h2> <a id="constraint-modeling-and-tradeoff-analysis" class="anchor" href="#constraint-modeling-and-tradeoff-analysis" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Constraint Modeling and Tradeoff Analysis</h2> 
 <p><a href="Images/screenshot-constraint.png?raw=true" target="_blank" rel="noopener noreferrer"><img src="Images/screenshot-constraint.png?raw=true" alt="Screenshot" title="Screenshot" style="max-width:100%;" /></a></p> 
 <p><a href="Images/screenshot-constraint2.png?raw=true" target="_blank" rel="noopener noreferrer"><img src="Images/screenshot-constraint2.png?raw=true" alt="Screenshot" title="Screenshot" style="max-width:100%;" /></a></p> 
-<h1> <a id="wiki" class="anchor" href="#wiki" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>WIKI</h1> 
+<h2> <a id="wiki" class="anchor" href="#wiki" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>WIKI</h2> 
 <p>The <a href="https://github.com/vorachet/Systext/wiki">wiki</a> contains various resources for users, including a user manual and links to screencasts and scientific papers.</p> 
-<h1> <a id="license" class="anchor" href="#license" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>License</h1> 
+<h2> <a id="license" class="anchor" href="#license" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>License</h2> 
 <p>License and supporting tool will be provided soon</p> 
 <p>Copyright (c) 2018 School of Information Technology, King Mongkut's University of Technology Thonburi</p>
 </body>
